--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <img src="images/name.svg" alt="logo name" class="logo-name" />
       </h1>
       <ul class="nav">
-        <li><a href="">Local Attractions</a></li>
-        <li><a href="">Photo Gallery</a></li>
+        <li><a href="#local">Local Attractions</a></li>
+        <li><a href="#gallery">Photo Gallery</a></li>
       </ul>
     </header>
     <section class="intro">
@@ -54,7 +54,7 @@
       </ul>
     </section>
     <section>
-      <div class="section-header">
+      <div class="section-header" id="local">
         <h4 class="section-header__subtitle">Local Attractions</h4>
         <h3 class="section-header__title">A Relaxing and Beautiful Town</h3>
       </div>
@@ -87,7 +87,7 @@
       </div>
     </section>
     <section>
-      <div class="section-header">
+      <div class="section-header" id="gallery">
         <h4 class="section-header__subtitle">Photo Gallery</h4>
         <h3 class="section-header__title">
           Take a Visual Trip Around Tulip Town
