--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <li class="intro__social__item"><i class="fab fa-twitter"></i></li>
       </ul>
     </section>
-    <section>
-      <div class="section-header" id="local">
+    <section id="local">
+      <div class="section-header">
         <h4 class="section-header__subtitle">Local Attractions</h4>
         <h3 class="section-header__title">A Relaxing and Beautiful Town</h3>
       </div>
@@ -86,8 +86,8 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="section-header" id="gallery">
+    <section id="gallery">
+      <div class="section-header">
         <h4 class="section-header__subtitle">Photo Gallery</h4>
         <h3 class="section-header__title">
           Take a Visual Trip Around Tulip Town
